@@ -2096,7 +2096,8 @@
 </widget>
 
 <widget class="GtkWindow" id="window_diff">
-  <property name="width_request">500</property>
+  <property name="width_request">600</property>
+  <property name="height_request">400</property>
   <property name="visible">True</property>
   <property name="title" translatable="yes">Olive - Diff</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
@@ -2139,13 +2140,14 @@
 		<widget class="GtkTreeView" id="treeview_diff_files">
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
-		  <property name="headers_visible">True</property>
+		  <property name="headers_visible">False</property>
 		  <property name="rules_hint">False</property>
 		  <property name="reorderable">False</property>
 		  <property name="enable_search">True</property>
 		  <property name="fixed_height_mode">False</property>
 		  <property name="hover_selection">False</property>
 		  <property name="hover_expand">False</property>
+		  <signal name="cursor_changed" handler="on_treeview_diff_files_cursor_changed" last_modification_time="Thu, 03 Aug 2006 09:02:37 GMT"/>
 		</widget>
 	      </child>
 	    </widget>
